--- a/views/index.html
+++ b/views/index.html
@@ -216,7 +216,10 @@ pre {
 
 <section class='container'>
           <hgroup>
-            <h1>Welcome to your Node.js application on OpenShift</h1>
+            <h1>Hello Node.js, this openshift start. </h1>
+
+
+
           </hgroup>
 
 
